Revert "Bug 1140613 - [Contacts] The star indicating a favorite contact overlaps long contact names in the header of the contact details page r=francisco"
This reverts commit 14aecb1b1ab9e2979ab4d1f4e37a0ab1524a00f1.

--- a/apps/communications/contacts/style/contacts.css
+++ b/apps/communications/contacts/style/contacts.css
@@ -6,15 +6,10 @@
 }
 
 /* Fav star in header */
-.favorite-indicator {
-  display: none;
-
-  background: url(/contacts/style/gphx/bitmap/default/vw-header/icons/fav-star.png) no-repeat center / 3rem;
-  padding: 0 1rem;
-}
-
-.favorite .favorite-indicator {
-  display: unset;
+#contact-name-title.favorite {
+  background: url(/contacts/style/gphx/bitmap/default/vw-header/icons/fav-star.png) no-repeat right 1rem / 3rem;
+  padding-right: 3rem;
+  margin-right: -1rem;
 }
 
 section[role="region"] > gaia-header .icon.icon-edit-contact {
